--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "license": "MIT",
     "private": false,
     "devDependencies": {
+        "@types/node": "^12.12.9",
+        "@types/node-fetch": "^2.5.3",
         "prettier": "^1.19.1",
         "rimraf": "^3.0.0",
         "tslib": "^1.10.0",
@@ -20,5 +22,9 @@
         "clean": "rimraf dist",
         "build": "tsc --project .",
         "start": "yarn build --watch"
+    },
+    "dependencies": {
+        "node-fetch": "^2.6.0",
+        "query-string": "^6.9.0"
     }
 }
