--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,6 @@
         "forceConsistentCasingInFileNames": true,
         "declaration": true
     },
-    "include": ["./src"]
+    "include": ["./src"],
+    "exclude": ["node_modules", "**/*.test.ts", "*/setupJest.ts"]
 }
