Hack test typing error

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
     "compilerOptions": {
         "target": "es5",
         "module": "commonjs",
-        "lib": ["esnext"],
+        /* Using "dom" lib because jest-fetch-mock relies on it for types. */
+        "lib": ["esnext", "dom"],
         "outDir": "./dist",
         "removeComments": true,
         "inlineSourceMap": true,
@@ -20,5 +21,5 @@
         "declaration": true
     },
     "include": ["./src"],
-    "exclude": ["node_modules", "**/*.test.ts", "*/setupJest.ts"]
+    "exclude": ["node_modules", "**/*.test.ts"]
 }
