--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "@prezly/sdk",
     "version": "1.0.0",
     "description": "Prezly API SDK",
-    "main": "dist/sdk.js",
+    "main": "dist/index.js",
     "repository": {
         "type": "git",
         "url": "https://github.com/prezly/sdk.git"
