--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
     "name": "@prezly/sdk",
-    "version": "0.0.0",
+    "version": "1.0.0-0",
     "description": "Prezly API SDK",
     "main": "dist/index.js",
+    "files": [
+        "dist/**"
+    ],
     "repository": {
         "type": "git",
         "url": "https://github.com/prezly/javascript-sdk.git"
     },
     "author": "Prezly Team <hello@prezly.com> (https://www.prezly.com)",
     "license": "MIT",
-    "private": false,
     "devDependencies": {
         "@types/jest": "^24.0.23",
         "@types/node": "^12.12.9",
         "@types/node-fetch": "^2.5.3",
         "jest": "^24.9.0",
         "jest-fetch-mock": "^2.1.2",
+        "np": "^5.1.3",
         "prettier": "^1.19.1",
         "rimraf": "^3.0.0",
         "ts-jest": "^24.1.0",
@@ -29,8 +32,13 @@
     "scripts": {
         "clean": "rimraf dist",
         "build": "tsc --project .",
-        "start": "yarn build --incremental --watch",
+        "start": "npm run build --incremental --watch",
         "test": "jest",
-        "prettier": "prettier --write './src/**/*.{ts,js}'"
+        "prettier": "prettier --write './src/**/*.{ts,js}'",
+        "prerelease": "npm run clean && npm run build",
+        "release": "np"
+    },
+    "np": {
+        "yarn": false
     }
 }
