Fix path mapping

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,10 @@
         "moduleResolution": "node",
         "baseUrl": "./src",
         "rootDir": "./src",
+        "paths": {
+            "Api": ["./Api"],
+            "types": ["./types"]
+        },
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "declaration": true
