Swtich from node-fetch to cross-fetch

--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
         "@babel/core": "^7.7.2",
         "@babel/preset-env": "^7.7.1",
         "@types/node": "^12.12.9",
-        "@types/node-fetch": "^2.5.3",
         "babel-jest": "^24.9.0",
         "jest": "^24.9.0",
         "jest-fetch-mock": "^2.1.2",
@@ -27,7 +26,7 @@
         "typescript": "^3.7.2"
     },
     "dependencies": {
-        "node-fetch": "^2.6.0",
+        "cross-fetch": "^3.0.4",
         "query-string": "^6.9.0"
     },
     "scripts": {
