--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     },
     "scripts": {
         "clean": "rimraf dist",
+        "prebuild": "npm run clean",
         "build": "tsc --project .",
         "start": "npm run build --incremental --watch",
         "test": "jest",
