--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/prezly/javascript-sdk.git"
+        "url": "https://github.com/prezly/javascript-sdk"
     },
     "author": "Prezly Team <hello@prezly.com> (https://www.prezly.com)",
     "license": "MIT",
