--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
         "build": "tsc --project .",
         "start": "npm run build --incremental --watch",
         "test": "jest",
-        "prettier": "prettier --write './src/**/*.{ts,js}'",
+        "prettier:check": "prettier --check './src/**/*.{ts,js}'",
+        "prettier:fix": "prettier --write './src/**/*.{ts,js}'",
         "prerelease": "npm run clean && npm run build",
         "release": "np"
     },
