--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -27,6 +27,7 @@ jobs:
 
     - name: prettier
       run: npm run prettier:check
+      continue-on-error: true
 
     - name: build
       run: npm run build
