--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "typescript": "^4.1.3"
     },
     "dependencies": {
+        "@prezly/slate-types": "0.1.0-alpha.11",
         "query-string": "^6.9.0"
     },
     "scripts": {
