Update tsconfig to not remove JSDoc comments

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "module": "commonjs",
         "lib": ["esnext", "dom"],
         "outDir": "./dist",
-        "removeComments": true,
+        "removeComments": false,
         "inlineSourceMap": true,
         "inlineSources": true,
         "downlevelIteration": true,
