--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "typescript": "^4.1.3"
     },
     "dependencies": {
+        "@prezly/progress-promise": "^1.0.0",
         "@prezly/slate-types": "0.1.0-alpha.16",
         "query-string": "^6.9.0"
     },
