--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,5 @@
         "declaration": true
     },
     "include": ["./src"],
-    "exclude": ["node_modules", "**/*.test.ts"]
+    "exclude": ["node_modules", "__snapshots__", "**/*.test.ts"]
 }
