--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "devDependencies": {
         "@babel/core": "^7.7.2",
         "@babel/preset-env": "^7.7.1",
+        "@prezly/uploads": "^0.1.0",
         "@types/node": "^12.12.9",
         "babel-jest": "^26.6.3",
         "jest": "^26.6.3",
