--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
         "prebuild": "npm run clean",
         "build": "tsc --project .",
         "start": "npm run build --incremental --watch",
-        "test": "jest",
+        "test": "npm tun test:build && npm run test:unit",
+        "test:unit": "jest",
+        "test:build": "node dist/index.js && tsc --noEmit dist/index.d.ts",
         "snapshot": "jest --updateSnapshot",
         "prettier:check": "prettier --check './src/**/*.{ts,js}'",
         "prettier:fix": "prettier --write './src/**/*.{ts,js}'",
