--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "clean": "rimraf dist",
         "prebuild": "npm run clean",
         "build": "tsc --project .",
+        "watch": "tsc --watch --preserveWatchOutput --project .",
         "start": "npm run build --incremental --watch",
         "test": "npm run test:build && npm run test:unit",
         "test:unit": "jest",
