--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
         "typescript": "^4.1.3"
     },
     "scripts": {
-        "clean": "rimraf dist",
-        "prebuild": "npm run clean",
+        "clean": "rimraf dist node_modules",
+        "prebuild": "npm run clean && npm ci",
         "build": "tsc --project .",
         "watch": "tsc --watch --preserveWatchOutput --project .",
         "start": "npm run build --incremental --watch",
