--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@prezly/sdk",
-    "version": "7.11.1",
+    "version": "7.12.0-0",
     "description": "Prezly API SDK",
     "main": "dist/index.js",
     "files": [
