--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "@prezly/sdk",
     "version": "7.11.1",
     "description": "Prezly API SDK",
+    "type": "module",
     "main": "dist/index.js",
     "files": [
         "dist/**"
