--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
         "@babel/core": "^7.7.2",
         "@babel/preset-env": "^7.7.1",
         "@types/node": "^12.12.9",
+        "@typescript-eslint/eslint-plugin": "^5.40.1",
+        "@typescript-eslint/parser": "^5.40.1",
         "babel-jest": "^26.6.3",
+        "eslint": "^8.25.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-import": "^2.26.0",
         "jest": "^26.6.3",
         "jest-fetch-mock": "^3.0.3",
         "np": "^7.2.0",
@@ -40,6 +45,8 @@
         "build": "tsc --project .",
         "watch": "tsc --watch --preserveWatchOutput --project .",
         "start": "npm run build --incremental --watch",
+        "lint": "eslint ./src --ext=.ts",
+        "lint:fix": "npm run lint -- --fix",
         "test": "npm run test:build && npm run test:unit",
         "test:unit": "jest",
         "test:build": "node dist/index.js && tsc --noEmit dist/index.d.ts",
