--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,10 @@
         "lib": ["esnext", "dom"],
         "outDir": "./dist",
         "removeComments": false,
+        "importsNotUsedAsValues": "error",
         "inlineSourceMap": true,
         "inlineSources": true,
+        "isolatedModules": true,
         "downlevelIteration": true,
         "strict": true,
         "noUnusedLocals": true,
