--- a/package.json
+++ b/package.json
@@ -22,12 +22,17 @@
         "query-string": "^6.9.0"
     },
     "devDependencies": {
+        "@babel/cli": "^7.19.3",
         "@babel/core": "^7.7.2",
         "@babel/preset-env": "^7.7.1",
+        "@babel/preset-typescript": "^7.18.6",
         "@types/node": "^12.12.9",
         "@typescript-eslint/eslint-plugin": "^5.40.1",
         "@typescript-eslint/parser": "^5.40.1",
         "babel-jest": "^26.6.3",
+        "babel-plugin-add-import-extension": "^1.6.0",
+        "babel-plugin-transform-inline-environment-variables": "^0.4.4",
+        "cross-env": "^7.0.3",
         "eslint": "^8.25.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-import": "^2.26.0",
@@ -42,7 +47,9 @@
     "scripts": {
         "clean": "rimraf dist node_modules",
         "prebuild": "npm run clean && npm ci",
-        "build": "tsc --project .",
+        "build": "npm run build:types && npm run build:es",
+        "build:types": "tsc --project .",
+        "build:es": "cross-env npm_package_repository_url=https://github.com/prezly/javascript-sdk babel ./src --ignore='**/*.test.ts' --config-file=./babel.config.json --extensions=.ts,.cts --source-root=./src --out-dir=./dist",
         "watch": "tsc --watch --preserveWatchOutput --project .",
         "start": "npm run build --incremental --watch",
         "lint": "eslint ./src --ext=.ts",
