--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
         "target": "es5",
         "module": "es6",
         "lib": ["esnext", "dom"],
-        "outDir": "./dist",
+        "emitDeclarationOnly": true,
+        "declarationDir": "./dist",
         "removeComments": false,
         "importsNotUsedAsValues": "error",
         "inlineSourceMap": true,
