--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
         "@types/node": "^12.12.9",
         "@typescript-eslint/eslint-plugin": "^5.40.1",
         "@typescript-eslint/parser": "^5.40.1",
-        "babel-jest": "^26.6.3",
         "babel-plugin-add-import-extension": "^1.6.0",
         "babel-plugin-transform-inline-environment-variables": "^0.4.4",
         "cross-env": "^7.0.3",
@@ -55,7 +54,7 @@
         "lint": "eslint ./src --ext=.ts",
         "lint:fix": "npm run lint -- --fix",
         "test": "npm run test:build && npm run test:unit",
-        "test:unit": "jest",
+        "test:unit": "NODE_OPTIONS=--experimental-vm-modules jest",
         "test:build": "node dist/index.js && tsc --noEmit dist/index.d.ts",
         "snapshot": "jest --updateSnapshot",
         "prettier:check": "prettier --check './src/**/*.{ts,js}'",
