--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -38,6 +38,9 @@ jobs:
     - name: npm install
       run: npm ci
 
+    - name: lint
+      run: npm run lint
+
     - name: build
       run: npm run build
 
