--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@prezly/sdk",
-    "version": "10.1.0-0",
+    "version": "10.2.0",
     "description": "Prezly API SDK",
     "type": "module",
     "main": "dist/index.js",
