--- a/babel.config.json
+++ b/babel.config.json
@@ -1,7 +1,7 @@
 {
     "presets": [
         "@babel/typescript",
-        ["@babel/preset-env", { "modules": false, "targets": { "node": "current" } }]
+        ["@babel/preset-env", { "modules": "commonjs", "targets": { "node": "current" } }]
     ],
     "plugins": [
         "babel-plugin-transform-inline-environment-variables",
