--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "@prezly/sdk",
     "version": "11.8.0",
     "description": "Prezly API SDK",
-    "type": "module",
+    "type": "commonjs",
     "main": "dist/index.js",
     "files": [
         "dist/**"
@@ -24,6 +24,7 @@
     "devDependencies": {
         "@babel/cli": "^7.19.3",
         "@babel/core": "^7.7.2",
+        "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
         "@babel/preset-env": "^7.7.1",
         "@babel/preset-typescript": "^7.18.6",
         "@types/node": "^12.12.9",
@@ -46,9 +47,9 @@
     "scripts": {
         "clean": "rimraf dist node_modules",
         "prebuild": "npm run clean && npm ci",
-        "build": "npm run build:types && npm run build:es",
+        "build": "npm run build:types && npm run build:cjs",
         "build:types": "tsc --project .",
-        "build:es": "babel ./src --ignore='**/*.test.ts' --config-file=./babel.config.json --extensions=.ts,.cts --source-root=./src --out-dir=./dist",
+        "build:cjs": "babel ./src --ignore='**/*.test.ts' --config-file=./babel.config.json --extensions=.ts,.cts --source-root=./src --out-dir=./dist",
         "watch": "tsc --watch --preserveWatchOutput --project .",
         "start": "npm run build --incremental --watch",
         "lint": "eslint ./src --ext=.ts",
@@ -60,7 +61,7 @@
         "prettier:check": "prettier --check './src/**/*.{ts,js}'",
         "prettier:fix": "prettier --write './src/**/*.{ts,js}'",
         "prerelease": "npm run clean && npm run build",
-        "release": "np"
+        "release": "np --any-branch"
     },
     "np": {
         "yarn": false
