--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@prezly/sdk",
-    "version": "15.15.1-0",
+    "version": "15.16.0",
     "description": "Prezly API SDK",
     "type": "module",
     "main": "dist/index.cjs",
