--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,11 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
+# Package lock files
+package-lock.json
+pnpm-lock.yaml
+yarn.lock
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
