--- a/package.json
+++ b/package.json
@@ -64,8 +64,9 @@
         "start": "npm run build --incremental --watch",
         "lint": "eslint ./src --ext=.ts",
         "lint:fix": "npm run lint -- --fix",
-        "test": "npm run test:build && npm run test:unit",
+        "test": "npm run test:build && npm run test:ts && npm run test:unit",
         "test:unit": "NODE_OPTIONS=--experimental-vm-modules jest",
+        "test:ts": "find src/ -name '*.test.ts' | xargs -I{} tsc --noEmit --strict {}",
         "test:build": "node dist/index.js && tsc --noEmit dist/index.d.ts",
         "snapshot": "jest --updateSnapshot",
         "prettier:check": "prettier --check './src/**/*.{ts,js}'",
