[DEV-11988] Fix Category i18n property typing
With previous approach, TS would always think that `Object.values(category.i18n)`
can contain undefined. So doing any map/forEach would require to add unnecessary
checks for emptiness.

The original intent behind declaring `i18n` as `Parital<...>` is better to guard
against by enabling the `noUncheckedIndexedAccess` TS compiler options.

See https://www.typescriptlang.org/tsconfig#noUncheckedIndexedAccess

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
         "isolatedModules": true,
         "downlevelIteration": true,
         "strict": true,
+        // @see https://www.typescriptlang.org/tsconfig#noUncheckedIndexedAccess
+        "noUncheckedIndexedAccess": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "noImplicitReturns": true,
