[CARE-3589] Fix deprecated TS compilation option

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
         "emitDeclarationOnly": true,
         "declarationDir": "./dist",
         "removeComments": false,
-        "importsNotUsedAsValues": "error",
+        "verbatimModuleSyntax": true,
         "inlineSourceMap": true,
         "inlineSources": true,
         "isolatedModules": true,
