--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
         "@babel/preset-env": "^7.7.1",
         "@babel/preset-typescript": "^7.18.6",
+        "@types/jest": "^29.5.11",
         "@types/node": "^12.12.9",
         "@typescript-eslint/eslint-plugin": "^6.13.2",
         "@typescript-eslint/parser": "^6.13.2",
