--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
         "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
         "@babel/preset-env": "^7.7.1",
         "@babel/preset-typescript": "^7.18.6",
-        "@types/jest": "^29.5.11",
-        "@types/node": "^12.12.9",
+        "@types/node": "^18.19.3",
         "@typescript-eslint/eslint-plugin": "^6.13.2",
         "@typescript-eslint/parser": "^6.13.2",
         "babel-plugin-add-import-extension": "^1.6.0",
@@ -46,13 +45,12 @@
         "eslint": "^8.25.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-import": "^2.26.0",
-        "jest": "^29.7.0",
-        "jest-fetch-mock": "^3.0.3",
         "np": "^7.2.0",
         "prettier": "^2.7.1",
         "rimraf": "^3.0.0",
-        "ts-jest": "^29.1.1",
-        "typescript": "^5.3.3"
+        "typescript": "^5.3.3",
+        "vitest": "^1.0.4",
+        "vitest-fetch-mock": "^0.2.2"
     },
     "scripts": {
         "clean": "rimraf dist node_modules",
@@ -66,10 +64,9 @@
         "lint": "eslint ./src --ext=.ts",
         "lint:fix": "npm run lint -- --fix",
         "test": "npm run test:build && npm run test:ts && npm run test:unit",
-        "test:unit": "NODE_OPTIONS=--experimental-vm-modules jest",
+        "test:unit": "vitest run",
         "test:ts": "find src/ -name '*.test.ts' | xargs -I{} tsc --noEmit --strict {}",
         "test:build": "node dist/index.js && tsc --noEmit dist/index.d.ts",
-        "snapshot": "jest --updateSnapshot",
         "prettier:check": "prettier --check './src/**/*.{ts,js}'",
         "prettier:fix": "prettier --write './src/**/*.{ts,js}'",
         "prerelease": "npm run build",
