--- a/package.json
+++ b/package.json
@@ -63,9 +63,8 @@
         "start": "npm run build --incremental --watch",
         "lint": "eslint ./src --ext=.ts",
         "lint:fix": "npm run lint -- --fix",
-        "test": "npm run test:build && npm run test:ts && npm run test:unit",
+        "test": "npm run test:build && npm run test:unit",
         "test:unit": "vitest run",
-        "test:ts": "find src/ -name '*.test.ts' | xargs -I{} tsc --noEmit --strict {}",
         "test:build": "node dist/index.js && tsc --noEmit dist/index.d.ts",
         "prettier:check": "prettier --check './src/**/*.{ts,js}'",
         "prettier:fix": "prettier --write './src/**/*.{ts,js}'",
