--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -36,7 +36,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: npm install
-      run: npm ci
+      run: npm i
 
     - name: lint
       run: npm run lint
