--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
         "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
         "@babel/preset-env": "^7.7.1",
         "@babel/preset-typescript": "^7.18.6",
+        "@biomejs/biome": "^2.2.4",
+        "@prezly/biome-config": "^1.0.1",
         "@types/node": "^20.10.4",
         "babel-plugin-add-import-extension": "^1.6.0",
         "babel-plugin-transform-inline-environment-variables": "^0.4.4",
@@ -55,8 +57,8 @@
         "build:cjs": "babel ./src --ignore='**/*.test.ts' --config-file=./babel.config.cjs.json --extensions=.ts,.cts --source-root=./src --out-dir=./dist --out-file-extension .cjs",
         "watch": "tsc --watch --preserveWatchOutput --project .",
         "start": "npm run build --incremental --watch",
-        "lint": "eslint ./src --ext=.ts",
-        "lint:fix": "npm run lint -- --fix",
+        "lint": "biome lint ./src",
+        "lint:fix": "biome lint ./src --write",
         "test": "npm run test:build && npm run test:unit",
         "test:unit": "vitest run",
         "test:build": "node dist/index.js && tsc --noEmit dist/index.d.ts",
