--- a/package.json
+++ b/package.json
@@ -62,8 +62,8 @@
         "test": "npm run test:build && npm run test:unit",
         "test:unit": "vitest run",
         "test:build": "node dist/index.js && tsc --noEmit dist/index.d.ts",
-        "prettier:check": "prettier --check './src/**/*.{ts,js}'",
-        "prettier:fix": "prettier --write './src/**/*.{ts,js}'",
+        "format:check": "biome format ./src",
+        "format": "biome format ./src --write",
         "prerelease": "npm run build",
         "release": "np"
     },
