--- a/package.json
+++ b/package.json
@@ -57,13 +57,13 @@
         "build:cjs": "babel ./src --ignore='**/*.test.ts' --config-file=./babel.config.cjs.json --extensions=.ts,.cts --source-root=./src --out-dir=./dist --out-file-extension .cjs",
         "watch": "tsc --watch --preserveWatchOutput --project .",
         "start": "npm run build --incremental --watch",
-        "lint": "biome lint ./src",
-        "lint:fix": "biome lint ./src --write",
+        "lint": "biome ci",
+        "lint:fix": "biome lint --write",
         "test": "npm run test:build && npm run test:unit",
         "test:unit": "vitest run",
         "test:build": "node dist/index.js && tsc --noEmit dist/index.d.ts",
-        "format:check": "biome format ./src",
-        "format": "biome format ./src --write",
+        "format:check": "biome format",
+        "format": "biome format --write",
         "prerelease": "npm run build",
         "release": "np"
     },
