--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@prezly/sdk",
-    "version": "26.2.1",
+    "version": "26.3.0-0",
     "description": "Prezly API SDK",
     "type": "module",
     "main": "dist/index.cjs",
